# pixel_paddle

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Constants.h
include/engine/: Collider.h  Component.h  GameManager.h  GameObject.h  GameRenderer.h  InputManager.h  MoveProvider.cpp  MoveProvider.h  Renderer.h  Transform.h  Vector2.h
src/engine/: Collider.cpp  Component.cpp  GameManager.cpp  GameObject.cpp  GameRenderer.cpp  InputManager.cpp  Renderer.cpp  Transform.cpp  Vector2.cpp
